# bevy_world_visualizer

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: entity_tree.rs  inspect_generator.rs  inspectable.rs  lib.rs
