[package]
name = "bevy_world_visualizer"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.4.0", default-features = false}
bevy_egui = {version = "0.1.2", default-features = false}
bevy-inspector-egui = "0.1.1"
regex = "1"